--- a/configure-test-server.yml
+++ b/configure-test-server.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: test-server
+- hosts: app-test-server
   become: true
   tasks:
   - name: update apt
@@ -12,4 +12,4 @@
     command: sudo systemctl start docker
 
   - name: deploy insureme application
-    command: sudo docker run -itd -p 8081:8081 --name insure-me shubhamkushwah123/insure-me:1.0
+    command: sudo docker run -itd -p 8081:8081 --name devops-insure-me sherinstephen87/devops-insure-me:2.0
